quarkus-reactive/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/ultraJeff/quarkus-reactive'
    deployment.kubernetes.io/revision: '1'
  resourceVersion: '36768263'
  name: quarkus-reactive
  generation: 1
  labels:
    app: quarkus-reactive
    app.kubernetes.io/component: quarkus-reactive
    app.kubernetes.io/instance: quarkus-reactive
    app.kubernetes.io/name: quarkus-reactive
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-reactive
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: quarkus-reactive
        deploymentconfig: quarkus-reactive
    spec:
      containers:
        - name: quarkus-reactive
          image: quay.io/msolberg/quarkus-reactive
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
